# rocket-oidc

./: .gitignore  Cargo.toml
entity/: Cargo.toml
entity/src/: clients.rs  fields.rs  lib.rs  prelude.rs
migration/src/: lib.rs  m20231118_000001_create_clients.rs
migrations/: 20231118174558_create-clients.sql  20231118193651_client-unique-index-on-uuid.sql
scripts/: authorize.hurl  authorize_post.hurl  client_post.hurl
src/: main.rs
src/db/: mod.rs
src/models/: mod.rs
src/oidc/: mod.rs
src/oidc/authorize/: mod.rs
src/rest/: mod.rs
src/rest/clients/: mod.rs  rotate_secret.rs
