[package]
name = "rocket-oidc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.192"
serde_json = "1.0.108"
sqlx = { version = "0.7.1", features = [ "runtime-tokio",  "chrono", "sqlite" ] }
