[package]
name = "rocket-oidc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }

sea-orm = { version = "0.12.6", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "with-chrono"] }
sqlx = { version = "0.7.1", features = [ "runtime-tokio",  "chrono", "sqlite" ] }
chrono = "0.4.31"
uuid = { version = "1.5.0", features = ["v4"]}

rocket = { version = "0.5.0", features = ["json"] }

jsonwebtoken = "9.1.0"

serde = "1.0.192"
serde_json = "1.0.108"


base64 = "0.21.5"
rand = "0.8.5"

thiserror = "1.0.50"
