[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sea-orm = { version = "0.12.6" }
serde = "1.0.192"
serde_json = "1.0.108"
uuid = { version = "1.5.0", features = ["v4"]}
